# node

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  bootstrap-peers.json  docker-compose.yml  fly.toml  install.ps1  install.sh  release-please-config.json
.cargo/: audit.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit-schedule.yml  main-red-alert.yml  pr-checks.yml  pr-triage.yml  release.yml  stale.yml
crates/git-remote-gitlawb/: Cargo.toml
crates/git-remote-gitlawb/src/: main.rs
crates/gitlawb-attest/: Cargo.toml
crates/gitlawb-core/: Cargo.toml
crates/gitlawb-core/src/: cert.rs  cid.rs  did.rs  encrypt.rs  http_sig.rs  identity.rs  lib.rs  ucan.rs
crates/gitlawb-node/: Cargo.toml
crates/gitlawb-node/src/: arweave.rs  bootstrap.rs  cert.rs  config.rs  encrypted_pin.rs  error.rs  icaptcha.rs  ipfs_pin.rs  main.rs  metrics.rs  operator.rs  pinata.rs  rate_limit.rs  reconciliation.rs  server.rs  state.rs  sync.rs  test_support.rs  visibility.rs  webhooks.rs
crates/gitlawb-node/src/api/: agents.rs  arweave.rs  bounties.rs  certs.rs  changelog.rs  encrypted.rs  events.rs  ipfs.rs  issues.rs  labels.rs  mod.rs  peers.rs  profiles.rs  protect.rs  pulls.rs  register.rs  replicas.rs  repos.rs  stars.rs  tasks.rs  visibility.rs  webhooks.rs
crates/gitlawb-node/src/auth/: mod.rs
crates/gitlawb-node/src/db/: mod.rs
crates/gitlawb-node/src/git/: issues.rs  mod.rs  push_delta.rs  repo_store.rs  smart_http.rs  store.rs  tigris.rs  visibility_pack.rs
crates/gitlawb-node/src/graphql/: mutation.rs  query.rs  subscription.rs  types.rs
crates/gitlawb-node/src/p2p/: mod.rs
crates/gl/: Cargo.toml
crates/gl/src/: agent.rs  bounty.rs  cert.rs  changelog.rs  clone.rs  doctor.rs  http.rs  identity.rs  init.rs  ipfs_cmd.rs  issue.rs  main.rs  mcp.rs  mirror.rs  name.rs  node.rs  node_stake.rs  peer.rs  pr.rs  protect.rs  quickstart.rs  register.rs  repo.rs  star.rs  status.rs  sync.rs  task.rs  ucan_cmd.rs  visibility.rs  webhook.rs  whoami.rs
crates/icaptcha-client/: Cargo.toml
crates/icaptcha-client/src/: lib.rs  pow.rs
crates/icaptcha-client/tests/: icaptcha_blackhole_tripwire.rs  icaptcha_mock_consumed.rs
crates/icaptcha-client/tests/support/: mod.rs
docs/: OSS-READINESS-AUDIT.md  RUN-A-NODE.md
infra/: README.md
infra/aws/: .gitignore  README.md  compose.yaml.tftpl  main.tf  outputs.tf  terraform.tfvars.example  user-data.sh.tftpl  variables.tf  versions.tf
infra/fly/: fly.toml
macos-app/: Package.swift
macos-app/Sources/GitlawbNode/: AppDelegate.swift  Config.swift  DockerCompose.swift  DockerDetector.swift  Info.plist  SettingsWindow.swift  StatusBarController.swift
macos-app/Sources/GitlawbNode/Resources/: AppIcon.icns  docker-compose.yml
npm/: .gitignore  README.md
scripts/: build-macos-app.sh
