[workspace]
resolver = "2"
members = [
    "crates/gitlawb-core",
    "crates/gitlawb-node",
    "crates/gl",
    "crates/git-remote-gitlawb",
    "crates/gitlawb-attest",
]

[workspace.package]
# Per-crate versions live in each crate's [package] so release-please can manage
# them (it cannot rewrite an inherited `version.workspace = true`). They are kept
# in lockstep by release-please's Rust workspace strategy.
edition = "2021"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
authors = ["gitlawb contributors"]
repository = "https://github.com/gitlawb/node"

[workspace.dependencies]
# async
tokio = { version = "1", features = ["full"] }
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.2"
# errors
thiserror = "2"
anyhow = "1"
# crypto
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
rand = "0.8.6"
sha2 = "0.10"
# encoding
hex = "0.4.3"
base64 = "0.22"
multibase = "0.9"
multihash = { version = "0.19", features = ["std"] }
multihash-codetable = { version = "0.1", features = ["sha2"] }
cid = "0.11"
# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# time
chrono = { version = "0.4", features = ["serde"] }
# uuid
uuid = { version = "1", features = ["v4"] }
# http client
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "rustls-tls"], default-features = false }
# HMAC
hmac = "0.12"

[profile.release]
lto = "thin"
strip = "symbols"
