[package]
name = "gl"
description = "The gitlawb CLI — identity management, node control, MCP server"
version = "0.5.1" # x-release-please-version
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "gl"
path = "src/main.rs"

[dependencies]
gitlawb-core = { path = "../gitlawb-core" }
icaptcha-client = { path = "../icaptcha-client" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
reqwest = { workspace = true }
uuid = { workspace = true }
urlencoding = "2"
alloy = { version = "1", default-features = false, features = [
    "contract",
    "provider-http",
    "reqwest",
    "signer-local",
    "signers",
    "sol-types",
    "network",
    "rpc-types-eth",
] }

[dev-dependencies]
mockito = "1"
tempfile = "3"
tokio = { workspace = true }
